
version 0.4
	Added unit-testing for logtools.parsers module
	Fixed small bug in GeoIP unit-testing
	Fixed small bug in logplot option parsing from configuration file
	Added logplot gchart backend 'line' chart type 
	Improved coverage of unit-testing for the plotting module
	
version 0.3
	Some bugfixes to command-line/options parsing
	setup.py long_description documentation
	Added logplot gchart backend chart type support (pie, histogram, line)
	Changed most methods' programmatic interface to use generators (yield values)
	Added 'aggregate' script
	
version 0.2
	Added support for configuration profiles (-P <profile_name>)
	Added logmerge utility and unittest
	Added logplot utility with initial Google Chart API support and unittest (Experimental)
	Added pygooglechart package dependency in setup.py
	
version 0.1
	Added to PyPI Python Package Index
	Initial check-in of project.
	Version 0.1 Tag