@@ -5,6 +5,8 @@ version 0.4
 	Fixed small bug in logplot option parsing from configuration file
 	Added logplot gchart backend 'line' chart type 
 	Improved coverage of unit-testing for the plotting module
+	Added support for regular expressions in bots useragents file. use r'<reg_ex>' syntax
+	
 	
 version 0.3
 	Some bugfixes to command-line/options parsing
